Fix vendorspecifics collection remove alignment

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/services.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/services.scss
@@ -127,6 +127,9 @@ fieldset.box {
       .inputWrapper, div.dropdown {
         width:200px;
       }
+      .collectionItem .collectionRemove {
+        left: #{80px + $space + 200px};
+      }
     }
     .on-off-content{
       background-color: darken($contentColor, 9%);
